# CPE419-ParallelProgramming

./: .gitignore  Makefile
bitonic-sycl/: Makefile
bitonic-sycl/src/: bitonic.hpp  main.cpp
bitonic/src/: cuda.h  main.cu
cuda/: Makefile
cuda/src/: hello.cu  matrix.cu  matrix.h
galaxy-sim/: Makefile  Makefile.gcc  testrun.sh
galaxy-sim/src/: nbody.c  nbody.cu  timer.h
knn/: Makefile
knn/src/: knn.cpp
knn2/: Makefile
knn2/src/: knn.cpp
lab0/: CMakeLists.txt  Makefile  dataPartA.csv  partA.c  partB.c
lab0/src/: lab0.c  lab0PartA.c
lab0b/: Makefile
lab0b/src/: check_cores.c  partB.c
life/: Makefile
life/src/: graphics.c  graphics.h  life.c  life.h
reduction/: Makefile
reduction-omp/: Makefile
reduction-omp/src/: main.cpp
reduction/src/: cuda.cu  cuda.h  main.cu  reduction.cu  reduction.h  scan.h
